# reddit2text

./: .bumpversion.cfg  .env.example  .flake8  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: bump-version.yml  deploy.yml
reddit2text/: __init__.py  main.py  models.py  testfile.py
tests/: conftest.py  reddit2text.pkl  test_data.csv  test_integration.py  test_main.py  test_output_csv.py  test_output_json.py  test_output_txt.py  test_outputs.py  test_reddit2text.py
tests/fixtures/: 10_years_ago_the_beta_for_destiny_1.pkl  how_do_you_dress_like_old_money.pkl  how_early_is_too_early_to_show_up_for_a_job.pkl  minimal_thread.json  sample_thread.json  what_are_the_things_you_stopped_buying_since_the.pkl
